--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         </section>
 
-        <section class="section section-3">
+        <section id="comments" class="comments">
         <div class="left">
 
         </div>
