--- a/index.html
+++ b/index.html
@@ -38,21 +38,20 @@
                 </div>
             </div>
             <div class="section">
-                <div class="description">
-                    <h1>Sobre a autora</h1>
-                    <h2>Suzete é praticante de diversas técnicas meditativas há 30 anos.<br>
-                    <br>Com duas formações na área da saúde e trabalho junto a milhares de pacientes, tanto em hospitais como no consultório, desenvolveu uma maneira própria para auxiliar as pessoas, que cruzaram seu caminho, a ter paz interior.<br>
-                    <br>Assim, depois de vários pedidos de amigos e pacientes, surgiu a vontade de compilar, em um e-book, as informações que julgou interessante, de forma simples e de fácil utilização, associando técnicas meditativas e tantas outras informações.<br>
-                    <br>Dessa forma, aquelas pessoas que desejarem acessar a felicidade existente em si, encontrarão nesse trabalho, já disponibilizado, essas técnicas. <br>   
-                    <br>Aproveitem a viagem.</h2>
+                <div class="left">
+                    <div class="description">
+                        <h1>Sobre a autora</h1>
+                        <h2>Suzete é praticante de diversas técnicas meditativas há 30 anos.<br>
+                        <br>Com duas formações na área da saúde e trabalho junto a milhares de pacientes, tanto em hospitais como no consultório, desenvolveu uma maneira própria para auxiliar as pessoas, que cruzaram seu caminho, a ter paz interior.<br>
+                        <br>Assim, depois de vários pedidos de amigos e pacientes, surgiu a vontade de compilar, em um e-book, as informações que julgou interessante, de forma simples e de fácil utilização, associando técnicas meditativas e tantas outras informações.<br>
+                        <br>Dessa forma, aquelas pessoas que desejarem acessar a felicidade existente em si, encontrarão nesse trabalho, já disponibilizado, essas técnicas. <br>   
+                        <br>Aproveitem a viagem.</h2>
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="./src/img/about.jpg" alt="About image">
                 </div>
             </div>
-        <div class="left">
-
-        </div>
-        <div class="right">
-
-        </div>
         </section>
 
         <section id="comments" class="comments">
