--- a/index.html
+++ b/index.html
@@ -54,13 +54,23 @@
             </div>
         </section>
 
-        <section id="comments" class="comments">
-        <div class="left">
+        <section id="comments" class="comments" data-anime='js-scroll'>
+            <div class="scroll-container">
+                <div class="spacing"></div>
+                <div class="scroll">
+                    <a href="#comments">continue descendo</a>
+                    <b>»</b>
+                </div>
+            </div>
+            <div class="section">
+                <h1>Depoimentos</h1>
+                <div class="left">
 
-        </div>
-        <div class="right">
+                </div>
+                <div class="right">
 
-        </div>
+                </div>
+            </div>
         </section>
 
         <section class="section section-4">
