--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./src/css/global.css">
     <link rel="stylesheet" href="./src/css/animations.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 <body>
-    <header>
+    <header class="bodyHeader">
             <img src="./src/img/logo.jpg" alt="Logo">
     </header>
     <main>
@@ -24,24 +25,21 @@
             <h2>E-book com técnicas para ajudar a melhorar a autoestima e orientar um caminho para a felicidade.<br>
             <br>São técnicas valiosas e simples. O e-book lhe proporcionará um caminho possível para reduzir o seu estado de baixa estima e tristeza.<br>
             <br>Com a utilização de tais técnicas no seu dia a dia, você será capaz de restaurar o seu bem estar.</h2>
-            <button class="button" onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button>
+            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button></div>
             <p>De <s>R$99,90</s> por <b>R$9,99</b></p>
         </div>
         </section>
 
         <section id="about" class="about" data-anime='js-scroll'>
-            <div class="scroll-container">
-                <div class="spacing"></div>
-                <div class="scroll">
-                    <a href="#about">continue descendo</a>
-                    <b>»</b>
-                </div>
+            <div class="scroll">
+                <a href="#about">continue descendo</a>
+                <b>»</b>
             </div>
             <div class="section">
                 <div class="left">
                     <div class="description">
                         <h1>Sobre a autora</h1>
-                        <h2>Suzete é praticante de diversas técnicas meditativas há 30 anos.<br>
+                        <h2>Suzete é praticante de diversas técnicas meditativas há mais de 30 anos.<br>
                         <br>Com duas formações na área da saúde e trabalho junto a milhares de pacientes, tanto em hospitais como no consultório, desenvolveu uma maneira própria para auxiliar as pessoas, que cruzaram seu caminho, a ter paz interior.<br>
                         <br>Assim, depois de vários pedidos de amigos e pacientes, surgiu a vontade de compilar, em um e-book, as informações que julgou interessante, de forma simples e de fácil utilização, associando técnicas meditativas e tantas outras informações.<br>
                         <br>Dessa forma, aquelas pessoas que desejarem acessar a felicidade existente em si, encontrarão nesse trabalho, já disponibilizado, essas técnicas. <br>   
