--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
         </section>
         
     </main>
+    <footer>
+        <div class="links">
+            <a href="mailto: cursos_suzeterovira@gmail.com">
+            <img src="./src/img/Email-icon.png" alt="Gmail"></a>
+            <a href="https://github.com/cursos_suzeterovira">
+            <img src="./src/img/instagram.svg" alt="Instagram"></a>
+            <a href="https://facebook.com/cursos_suzeterovira">
+            <img src="./src/img/facebook.svg" alt="Facebook"></a>
+        </div>
+        <div>
+            <p>cursos_suzeterovira@gmail.com</p>
+        </div>
+    </footer>
 </body>
     <script src="./src/js/index.js" type="module"></script>
 </html>
