--- a/index.html
+++ b/index.html
@@ -105,18 +105,25 @@
                 </ul>
             </div>
         </section>
-
-        <section class="section section-4">
-        <div class="left">
-
-        </div>
-        <div class="right">
-
-        </div>
+        <section class="questions">
+            <h1>Perguntas frequentes</h1>
+            <div class="section">
+                <h2>Em qual formato o eBook é disponibilizado?</h2>
+                <p>O eBook é enviado para você nos formatos PDF.</p>
+                <h2>Quais as formas de pagamento?</h2>
+                <p>Cartão, boleto ou débito em conta.</p>
+                <h2>Quantas páginas tem o eBook?</h2>
+                <p>O eBook possui 30 páginas, dividas em módulos diferentes!</p>
+                <h2>Quanto tempo demoro para receber o material?</h2>
+                <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
+            </div>
         </section>
         
     </main>
     <footer>
+        <div2>
+            <p>2022 - Todos os direitos reservados.</p>
+        </div2>
         <div class="links">
             <a href="mailto: cursos_suzeterovira@gmail.com">
             <img src="./src/img/Email-icon.png" alt="Gmail"></a>
