--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
                 <h2>Quanto tempo demoro para receber o material?</h2>
                 <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
             </div>
+            <div class="more">
+                <h1>Saiba mais:</h1>
+                <a href="https://wa.me/5584991925078"><img src="./src/img/whatsapp.png" alt="Whatsapp icon"></a>
+                <h1>(84) 99192-5078</h1>
+            </div>
         </section>
         
     </main>
@@ -125,12 +130,14 @@
             <p>2022 - Todos os direitos reservados.</p>
         </div2>
         <div class="links">
-            <a href="mailto: cursos_suzeterovira@gmail.com">
-            <img src="./src/img/Email-icon.png" alt="Gmail"></a>
+            <a href="https://wa.me/5584991925078">
+            <img src="./src/img/Whatsapp.png" alt="Gmail"></a>
             <a href="https://github.com/cursos_suzeterovira">
             <img src="./src/img/instagram.svg" alt="Instagram"></a>
             <a href="https://facebook.com/cursos_suzeterovira">
             <img src="./src/img/facebook.svg" alt="Facebook"></a>
+            <a href="mailto: cursos_suzeterovira@gmail.com">
+            <img src="./src/img/Email-icon.png" alt="Gmail"></a>
         </div>
         <div>
             <p>cursos_suzeterovira@gmail.com</p>
