--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <br>São técnicas valiosas e simples. O e-book lhe proporcionará um caminho possível para reduzir o seu estado de baixa estima e tristeza.<br>
             <br>Com a utilização de tais técnicas no seu dia a dia, você será capaz de restaurar o seu bem estar.</h2>
             <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button></div>
-            <p>De <s>R$99,90</s> por <b>R$9,99</b></p>
+            <p>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</p>
         </div>
         </section>
 
@@ -117,6 +117,8 @@
                 <h2>Quanto tempo demoro para receber o material?</h2>
                 <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
             </div>
+            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button></div>
+            <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</h2>
             <div class="more">
                 <h1>Saiba mais:</h1>
                 <a href="https://wa.me/5584991925078"><img src="./src/img/whatsapp.png" alt="Whatsapp icon"></a>
