--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</h2>
             <div class="more">
                 <h1>Saiba mais:</h1>
-                <a href="https://wa.me/5584991925078"><img src="./src/img/whatsapp.png" alt="Whatsapp icon"></a>
+                <a href="https://wa.me/5584991925078"><img src="./src/img/Whatsapp.png" alt="Whatsapp icon"></a>
                 <h1>(84) 99192-5078</h1>
             </div>
         </section>
