--- a/index.html
+++ b/index.html
@@ -107,22 +107,26 @@
         </section>
         <section class="questions">
             <h1>Perguntas frequentes</h1>
-            <div class="section">
-                <h2>Em qual formato o eBook é disponibilizado?</h2>
-                <p>O eBook é enviado para você nos formatos PDF.</p>
-                <h2>Quais as formas de pagamento?</h2>
-                <p>Cartão, boleto ou débito em conta.</p>
-                <h2>Quantas páginas tem o eBook?</h2>
-                <p>O eBook possui 30 páginas, dividas em módulos diferentes!</p>
-                <h2>Quanto tempo demoro para receber o material?</h2>
-                <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
+            <div class="separator">
+                <div class="section">
+                    <h2>Em qual formato o eBook é disponibilizado?</h2>
+                    <p>O eBook é enviado para você nos formatos PDF.</p>
+                    <h2>Quais as formas de pagamento?</h2>
+                    <p>Cartão, boleto ou débito em conta.</p>
+                    <h2>Quantas páginas tem o eBook?</h2>
+                    <p>O eBook possui 30 páginas, dividas em módulos diferentes!</p>
+                    <h2>Quanto tempo demoro para receber o material?</h2>
+                    <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
+                </div>
+                <div class="more">
+                    <h1>Saiba mais:</h1>
+                    <a href="https://wa.me/5584991925078"><img src="./src/img/Whatsapp.png" alt="Whatsapp icon"></a>
+                    <h1>(84) 99192-5078</h1>
+                </div>
             </div>
-            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button></div>
-            <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</h2>
-            <div class="more">
-                <h1>Saiba mais:</h1>
-                <a href="https://wa.me/5584991925078"><img src="./src/img/Whatsapp.png" alt="Whatsapp icon"></a>
-                <h1>(84) 99192-5078</h1>
+            <div class="button">
+                <button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button>
+                <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</h2>
             </div>
         </section>
         
