--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <p>2022 - Todos os direitos reservados.</p>
         </div2>
         <div class="links">
-            <a href="https://github.com/cursos_suzeterovira">
+            <a href="https://instagram.com/cursos_suzeterovira">
             <img src="./src/img/instagram.svg" alt="Instagram"></a>
             <a href="https://facebook.com/cursos_suzeterovira">
             <img src="./src/img/facebook.svg" alt="Facebook"></a>
