--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="links">
             <a href="https://instagram.com/cursos_suzeterovira">
             <img src="./src/img/instagram.svg" alt="Instagram"></a>
-            <a href="https://facebook.com/cursos_suzeterovira">
+            <a href="https://www.facebook.com/Cursos-Suzete-Rovira-109507415008658">
             <img src="./src/img/facebook.svg" alt="Facebook"></a>
             <a href="mailto: cursos_suzeterovira@gmail.com">
             <img src="./src/img/Email-icon.png" alt="Gmail"></a>
