--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <a href="https://www.facebook.com/Cursos-Suzete-Rovira-109507415008658">
             <img src="./src/img/facebook.svg" alt="Facebook"></a>
             <a href="mailto: cursos_suzeterovira@gmail.com">
-            <img src="./src/img/Email-icon.png" alt="Gmail"></a>
+            <img src="./src/img/Email-icon.png" alt="Email"></a>
         </div>
         <div>
             <p>cursos_suzeterovira@gmail.com</p>
