--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             <img src="./src/img/instagram.svg" alt="Instagram"></a>
             <a href="https://www.facebook.com/Cursos-Suzete-Rovira-109507415008658">
             <img src="./src/img/facebook.svg" alt="Facebook"></a>
-            <a href="mailto: cursos_suzeterovira@gmail.com">
+            <a href="mailto: sroviraps@hotmail.com">
             <img src="./src/img/Email-icon.png" alt="Email"></a>
         </div>
         <div>
-            <p>cursos_suzeterovira@gmail.com</p>
+            <p>sroviraps@hotmail.com</p>
         </div>
     </footer>
 </body>
