--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section class="section home">
         <div class="left">
-            <img src="./src/img/ebook.jpg" alt="Ebook">
+            <img src="./src/img/ebook.jpg" alt="e-book">
         </div>
         <div class="right">
             <h1>Autoconhecimento<br>& bem estar</h1>
@@ -109,12 +109,12 @@
             <h1>Perguntas frequentes</h1>
             <div class="separator">
                 <div class="section">
-                    <h2>Em qual formato o eBook é disponibilizado?</h2>
-                    <p>O eBook é enviado para você nos formatos PDF.</p>
+                    <h2>Em qual formato o e-book é disponibilizado?</h2>
+                    <p>O e-book é enviado para você nos formatos PDF.</p>
                     <h2>Quais as formas de pagamento?</h2>
                     <p>Cartão, boleto ou débito em conta.</p>
-                    <h2>Quantas páginas tem o eBook?</h2>
-                    <p>O eBook possui 30 páginas, dividas em módulos diferentes!</p>
+                    <h2>Quantas páginas tem o e-book?</h2>
+                    <p>O e-book possui 30 páginas, dividas em módulos diferentes!</p>
                     <h2>Quanto tempo demoro para receber o material?</h2>
                     <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
                 </div>
