--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 <ul>
                     <li>
                         <div class="container">
-                            <img src="./src/img/foto.jpg" alt="Foto comentário">
+                            <img src="./src/img/angelucia.jpeg" alt="Foto comentário">
                             <h1>Angelucia Morais</h1>
                         </div>
                         <p>"Foi uma experiência incrível. Hoje consigo realizar as técnicas ensinadas e até ensino outras pessoas."</p>
                     </li>
                     <li>
                         <div class="container">
-                            <img src="./src/img/foto.jpg" alt="Foto comentário">
+                            <img src="./src/img/denise.jpeg" alt="Foto comentário">
                             <h1>Denise Rovira</h1>
                         </div>
                         <p>"Foi muito fácil colocar em prática o que aprendi no e-book."</p>
                     </li>
                     <li>
                         <div class="container">
-                            <img src="./src/img/foto.jpg" alt="Foto comentário">
+                            <img src="./src/img/fabiana.jpeg" alt="Foto comentário">
                             <h1>Fabiana Ruy</h1>
                         </div>
                         <p>"Suzete, muito obrigada. Melhorei muito e dormi a noite toda, coisa que nao fazia há muito tempo."</p>
