--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
                 </ul>
             </div>
         </section>
-        <section class="questions">
-            <h1>Perguntas frequentes</h1>
+        <section id="questions" class="questions" data-anime='js-scroll'>
+            <div class="scroll" style="background-color: var(--background);">
+                <a href="#questions">continue descendo</a>
+                <b>»</b>
+            </div>
             <div class="separator">
                 <div class="section">
+                    <h1>Perguntas frequentes</h1>
                     <h2>Em qual formato o e-book é disponibilizado?</h2>
                     <p>O e-book é enviado para você nos formatos PDF.</p>
                     <h2>Quais as formas de pagamento?</h2>
