--- a/index.html
+++ b/index.html
@@ -110,22 +110,24 @@
                 <a href="#questions">continue descendo</a>
                 <b>»</b>
             </div>
-            <div class="separator">
-                <div class="section">
-                    <h1>Perguntas frequentes</h1>
-                    <h2>Em qual formato o e-book é disponibilizado?</h2>
-                    <p>O e-book é enviado para você nos formatos PDF.</p>
-                    <h2>Quais as formas de pagamento?</h2>
-                    <p>Cartão, boleto ou débito em conta.</p>
-                    <h2>Quantas páginas tem o e-book?</h2>
-                    <p>O e-book possui 30 páginas, dividas em módulos diferentes!</p>
-                    <h2>Quanto tempo demoro para receber o material?</h2>
-                    <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
-                </div>
-                <div class="more">
-                    <h1>Saiba mais:</h1>
-                    <a href="https://wa.me/5584991925078"><img src="./src/img/Whatsapp.png" alt="Whatsapp icon"></a>
-                    <h1>(84) 99192-5078</h1>
+            <div class="section">
+                <div class="separator">
+                    <div class="sec">
+                        <h1>Perguntas frequentes</h1>
+                        <h2>Em qual formato o e-book é disponibilizado?</h2>
+                        <p>O e-book é enviado para você nos formatos PDF.</p>
+                        <h2>Quais as formas de pagamento?</h2>
+                        <p>Cartão, boleto ou débito em conta.</p>
+                        <h2>Quantas páginas tem o e-book?</h2>
+                        <p>O e-book possui 30 páginas, dividas em módulos diferentes!</p>
+                        <h2>Quanto tempo demoro para receber o material?</h2>
+                        <p>Assim que a confirmação de pagamento sair, seu material sera disponibilizado.<br> Pode demorar até 2 dias úteis, em caso de pagamento com boletos.</p>
+                    </div>
+                    <div class="more">
+                        <h1>Saiba mais:</h1>
+                        <a href="https://wa.me/5584991925078"><img src="./src/img/Whatsapp.png" alt="Whatsapp icon"></a>
+                        <h1>(84) 99192-5078</h1>
+                    </div>
                 </div>
             </div>
             <div class="button">
