--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   /></noscript>
   <!-- End Meta Pixel Code -->
 <head>
+    <meta name="facebook-domain-verification" content="bf02sejplycp3lamemal469g32agsr" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
