--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>E-book com técnicas para ajudar a melhorar a autoestima e orientar um caminho para a felicidade.<br>
             <br>São técnicas valiosas e simples. O e-book lhe proporcionará um caminho possível para reduzir o seu estado de baixa estima e tristeza.<br>
             <br>Com a utilização de tais técnicas no seu dia a dia, você será capaz de restaurar o seu bem estar.</h2>
-            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button></div>
+            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P?dp=1'">Comprar e-book</button></div>
             <p>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</p>
         </div>
         </section>
