--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="button">
-                <button onClick="location.href='https://go.hotmart.com/U70484567P'">Comprar e-book</button>
+                <button onClick="location.href='https://go.hotmart.com/U70484567P?dp=1'">Comprar e-book</button>
                 <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$9,99</b><br>no boleto ou cartão.</h2>
             </div>
         </section>
