--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             <h2>E-book com técnicas para ajudar a melhorar a autoestima e orientar um caminho para a felicidade.<br>
             <br>São técnicas valiosas e simples. O e-book lhe proporcionará um caminho possível para reduzir o seu estado de baixa estima e tristeza.<br>
             <br>Com a utilização de tais técnicas no seu dia a dia, você será capaz de restaurar o seu bem estar.</h2>
-            <div class="button"><button onClick="location.href='https://go.hotmart.com/U70484567P?dp=1'">Comprar e-book</button></div>
-            <p>De <s>R$99,90</s> por <b>R$29,90</b><br>no boleto ou cartão.</p>
+            <div class="button"><button onClick="location.href='https://pay.hotmart.com/U70484567P?checkoutMode=10'">Comprar e-book</button></div>
+            <!-- <p>De <s>R$99,90</s> por <b>R$10,00</b><br>no boleto ou cartão.</p> -->
+            <p>R$10,00</p>
         </div>
         </section>
 
@@ -132,8 +133,9 @@
                 </div>
             </div>
             <div class="button">
-                <button onClick="location.href='https://go.hotmart.com/U70484567P?dp=1'">Comprar e-book</button>
-                <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$29,90</b><br>no boleto ou cartão.</h2>
+                <button onClick="location.href='https://pay.hotmart.com/U70484567P?checkoutMode=10'">Comprar e-book</button>
+                <!-- <h2 style="text-align:center"><br>De <s>R$99,90</s> por <b>R$29,90</b><br>no boleto ou cartão.</h2> -->
+                <h2 style="text-align:center">R$10,00</h2>
             </div>
         </section>
         
